ISSUP-2726 fix cta overlapping with see more button on changelog tab

--- a/modules/dxp/apps/osb/osb-customer/osb-customer-release-tool/osb-customer-release-tool-web/src/main/css/_changelog.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-customer-release-tool/osb-customer-release-tool-web/src/main/css/_changelog.scss
@@ -16,7 +16,7 @@
 	}
 
 	.more-options {
-		bottom: 24px;
+		bottom: 146px;
 		position: absolute;
 	}
 
