--- a/modules/dxp/apps/osb/osb-customer/osb-customer-release-tool/osb-customer-release-tool-web/src/main/css/_general.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-customer-release-tool/osb-customer-release-tool-web/src/main/css/_general.scss
@@ -20,6 +20,10 @@
 			height: 48px;
 			width: 48px;
 		}
+
+		@include media-breakpoint-down(md) {
+			margin-right: 0;
+		}
 	}
 }
 
